<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cardio_bg">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="end"
                android:background="@drawable/ic_backbtn" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/imfellfrenchcanon_regular"
                android:text="@string/cardio_why_lose_weight"
                android:textColor="#000000"
                android:textSize="36sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:background="@drawable/rounded_transparent_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/imfellfrenchcanon_regular"
                    android:textSize="20sp"
                    android:text="@string/cardio_why_lose_weight_desc"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/imfellfrenchcanon_regular"
                android:text="@string/cardio_how_does_cardio_affect_weight_loss"
                android:textColor="#000000"
                android:textSize="36sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:background="@drawable/rounded_transparent_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/imfellfrenchcanon_regular"
                    android:textSize="20sp"
                    android:text="@string/cardio_how_does_cardio_affect_weight_loss_desc"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/imfellfrenchcanon_regular"
                android:text="@string/cardio_benefits"
                android:textColor="#000000"
                android:textSize="36sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="16dp"
                android:background="@drawable/rounded_transparent_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/imfellfrenchcanon_regular"
                    android:textSize="20sp"
                    android:text="@string/cardio_benefits_desc"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/imfellfrenchcanon_regular"
                android:text="@string/cardio_types"
                android:textColor="#000000"
                android:gravity="center"
                android:textSize="32sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/istokweb_regular"
                    android:text="@string/cardio_jogging"
                    android:textColor="#000000"
                    android:textSize="32sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:radius="16dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="16dp"
                    android:layout_marginBottom="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cardio_jogging"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <Button
                            android:id="@+id/btnJoggingReadMore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/read_more"
                            android:textSize="20sp"
                            android:fontFamily="@font/imfellfrenchcanon_regular"
                            android:textColor="@android:color/black"
                            android:backgroundTint="#42E8C0"
                            android:paddingHorizontal="24dp"
                            android:paddingVertical="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintRight_toRightOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/istokweb_regular"
                    android:text="@string/cardio_jumpingjacks"
                    android:textColor="#000000"
                    android:textSize="32sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:radius="16dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="16dp"
                    android:layout_marginBottom="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/cardio_jumpingjacks"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <Button
                            android:id="@+id/btnJumpingJacksReadMore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/read_more"
                            android:textSize="20sp"
                            android:fontFamily="@font/imfellfrenchcanon_regular"
                            android:textColor="@android:color/black"
                            android:backgroundTint="#42E8C0"
                            android:paddingHorizontal="24dp"
                            android:paddingVertical="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintRight_toRightOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/istokweb_regular"
                    android:text="@string/cardio_jumprope"
                    android:textColor="#000000"
                    android:textSize="32sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:radius="16dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="16dp"
                    android:layout_marginBottom="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cardio_jumprope"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <Button
                            android:id="@+id/btnJumpRopeReadMore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/read_more"
                            android:textSize="20sp"
                            android:fontFamily="@font/imfellfrenchcanon_regular"
                            android:textColor="@android:color/black"
                            android:backgroundTint="#42E8C0"
                            android:paddingHorizontal="24dp"
                            android:paddingVertical="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintRight_toRightOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/istokweb_regular"
                    android:text="@string/cardio_cycling"
                    android:textColor="#000000"
                    android:textSize="32sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:radius="16dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="16dp"
                    android:layout_marginBottom="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cardio_cycling"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <Button
                            android:id="@+id/btnCyclingReadMore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/read_more"
                            android:textSize="20sp"
                            android:fontFamily="@font/imfellfrenchcanon_regular"
                            android:textColor="@android:color/black"
                            android:backgroundTint="#42E8C0"
                            android:paddingHorizontal="24dp"
                            android:paddingVertical="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintRight_toRightOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>